fix: adjusted light mode CSS file to match dark mode

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -1590,6 +1590,7 @@ section {
         width: 100%; /* Zmniejsza szerokość całego kontenera o 20% */
         margin: 20px auto; /* Wyśrodkowuje kontener */
         max-width: 1200px; /* or any other suitable max-width */
+        margin-top: 70px;
     }
     
     .team-carousel {
